@@ -39,6 +39,7 @@
 typedef struct BlockCnt {
   struct BlockCnt *previous;  /* chain */
   int breaklist;  /* list of jumps out of this loop */
+	int contlist;  /* list of jumps to the loop condition */
   int nactvar;  /* # active local variables outside the breakable structure */
   int upval;  /* true if some variable in the block is an upvalue */
   int isbreakable;  /* true if `block' is a loop */
@@ -281,6 +282,7 @@ static void code_params (LexState *ls, int nparams, int dots) {
 
 static void enterblock (FuncState *fs, BlockCnt *bl, int isbreakable) {
   bl->breaklist = NO_JUMP;
+	bl->contlist = NO_JUMP;
   bl->isbreakable = isbreakable;
   bl->nactvar = fs->nactvar;
   bl->upval = 0;
@@ -978,7 +980,7 @@ static void whilestat (LexState *ls, int line) {
   luaK_concat(fs, &v.f, fs->jpc);
   fs->jpc = NO_JUMP;
   sizeexp = fs->pc - expinit;  /* size of expression code */
-  if (sizeexp > MAXEXPWHILE) 
+  if (sizeexp > MAXEXPWHILE)
     luaX_syntaxerror(ls, "`while' condition too complex");
   for (i = 0; i < sizeexp; i++)  /* save `exp' code */
     codeexp[i] = fs->f->code[expinit + i];
@@ -988,6 +990,7 @@ static void whilestat (LexState *ls, int line) {
   blockinit = luaK_getlabel(fs);
   block(ls);
   luaK_patchtohere(fs, whileinit);  /* initial jump jumps to here */
+  luaK_patchtohere(fs, bl.contlist);
   /* move `exp' back to code */
   if (v.t != NO_JUMP) v.t += fs->pc - expinit;
   if (v.f != NO_JUMP) v.f += fs->pc - expinit;
@@ -1010,6 +1013,7 @@ static void repeatstat (LexState *ls, int line) {
   next(ls);
   block(ls);
   check_match(ls, TK_UNTIL, TK_REPEAT, line);
+  luaK_patchtohere(fs, bl.contlist);
   cond(ls, &v);
   luaK_patchlist(fs, v.f, repeat_init);
   leaveblock(fs);
@@ -1036,6 +1040,7 @@ static void forbody (LexState *ls, int base, int line, int nvars, int isnum) {
   prep = luaK_getlabel(fs);
   block(ls);
   luaK_patchtohere(fs, prep-1);
+	luaK_patchtohere(fs, bl.contlist);
   endfor = (isnum) ? luaK_codeAsBx(fs, OP_FORLOOP, base, NO_JUMP) :
                      luaK_codeABC(fs, OP_TFORLOOP, base, 0, nvars - 3);
   luaK_fixline(fs, line);  /* pretend that `OP_FOR' starts the loop */
@@ -1264,6 +1269,24 @@ static void breakstat (LexState *ls) {
 }
 
 
+static void continuestat (LexState *ls) {
+  /* stat -> CONTINUE [NAME] */
+  FuncState *fs = ls->fs;
+  BlockCnt *bl = fs->bl;
+  int upval = 0;
+  next(ls);  /* skip BREAK */
+  while (bl && !bl->isbreakable) {
+    upval |= bl->upval;
+    bl = bl->previous;
+  }
+  if (!bl)
+    luaX_syntaxerror(ls, "no loop to continue");
+  if (upval)
+    luaK_codeABC(fs, OP_CLOSE, bl->nactvar, 0, 0);
+  luaK_concat(fs, &bl->contlist, luaK_jump(fs));
+}
+
+
 static int statement (LexState *ls) {
   int line = ls->linenumber;  /* may be needed for error messages */
   switch (ls->t.token) {
@@ -1307,6 +1330,10 @@ static int statement (LexState *ls) {
     }
     case TK_BREAK: {  /* stat -> breakstat */
       breakstat(ls);
+      return 1;  /* must be last statement */
+    }
+    case TK_CONTINUE: {  /* stat -> continuestat */
+      continuestat(ls);
       return 1;  /* must be last statement */
     }
     default: {
